# qvac-ext-lib-llama.cpp

.github/workflows/: build.yml  release.yml
common/: arg.cpp  common.cpp  common.h
examples/training/: CMakeLists.txt  finetune-lora.cpp  finetune.cpp
ggml/src/: ggml-opt.cpp  ggml.c
ggml/src/ggml-metal/: ggml-metal-device.cpp  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal.m  ggml-metal.metal
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: dequant_funcs.glsl  mul_mm_funcs.glsl  vulkan-shaders-gen.cpp
include/: llama.h
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-lora-training.cpp
tests/: test-backend-ops.cpp  test-tokenizers-repo.sh
tools/main/: main.cpp
